made project compatible with java 8